--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Home/Index.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 <div class="jumbotron" style="text-align: center;">
     <h1 style="font-family: OptimusPrinceps">Dark Souls</h1>
     <p style="font-family: OptimusPrinceps">Hello from AppHarbor</p>
+    <p style="font-family: OptimusPrinceps">Test</p>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
