--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Shared/_Layout.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Shared/_Layout.cshtml
@@ -24,6 +24,13 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @if (Context.User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Characters", "Create", "Characters")</li>
+                        <li>@Html.ActionLink("Weapons", "Create", "Weapons")</li>
+                        <li>@Html.ActionLink("Armors", "Create", "Armors")</li>
+                        <li>@Html.ActionLink("Magics", "Create", "Magics")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
