--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Weapons/Index.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Weapons/Index.cshtml
@@ -12,6 +12,13 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Level)
+        </th>
+
+        <th>
             @Html.DisplayNameFor(model => model.BaseDamage)
         </th>
         <th>
@@ -20,12 +27,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Poison)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Level)
-        </th>
+
         <th>
             @Html.DisplayNameFor(model => model.Image)
         </th>
@@ -35,6 +37,13 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Level)
+        </td>
+
+        <td>
             @Html.DisplayFor(modelItem => item.BaseDamage)
         </td>
         <td>
@@ -43,14 +52,10 @@
         <td>
             @Html.DisplayFor(modelItem => item.Poison)
         </td>
+
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Level)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
+            @*@Html.DisplayFor(modelItem => item.Image)*@
+            <img src="@item.Image" alt="@item.Name" />
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
