--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Characters/Index.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Characters/Index.cshtml
@@ -12,23 +12,26 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Armor.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Magic.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.User.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Weapon.Name)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Level)
         </th>
+
+        <th>
+            @Html.DisplayNameFor(model => model.Weapon)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Armor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Magic)
+        </th>
+        @*<th>
+            @Html.DisplayNameFor(model => model.User.Email)
+        </th>*@
+
+
         <th>
             @Html.DisplayNameFor(model => model.Image)
         </th>
@@ -38,25 +41,28 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Armor.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Magic.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Weapon.Name)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Level)
         </td>
+
         <td>
-            @Html.DisplayFor(modelItem => item.Image)
+            @Html.DisplayFor(modelItem => item.Weapon.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Armor.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Magic.Name)
+        </td>
+        @*<td>
+            @Html.DisplayFor(modelItem => item.User.Email)
+        </td>*@
+
+        <td>
+            @*@Html.DisplayFor(modelItem => item.Image)*@
+            <img src="@item.Image" alt="@item.Name" />
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
