--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Magics/Index.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Magics/Index.cshtml
@@ -12,6 +12,13 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Level)
+        </th>
+
+        <th>
             @Html.DisplayNameFor(model => model.BaseMagic)
         </th>
         <th>
@@ -23,12 +30,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Lightning)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Level)
-        </th>
+
         <th>
             @Html.DisplayNameFor(model => model.Image)
         </th>
@@ -37,6 +39,13 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Level)
+        </td>
+
         <td>
             @Html.DisplayFor(modelItem => item.BaseMagic)
         </td>
@@ -49,14 +58,10 @@
         <td>
             @Html.DisplayFor(modelItem => item.Lightning)
         </td>
+
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Level)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Image)
+            @*@Html.DisplayFor(modelItem => item.Image)*@
+            <img src="@item.Image" alt="@item.Name" />
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
