--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Shared/_Layout.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                         <li>@Html.ActionLink("Weapons", "Index", "Weapons")</li>
                         <li>@Html.ActionLink("Armors", "Index", "Armors")</li>
                         <li>@Html.ActionLink("Magics", "Index", "Magics")</li>
+                        <li>@Html.ActionLink("Fights", "Index", "Fights")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
