--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Characters/Edit.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Characters/Edit.cshtml
@@ -6,17 +6,20 @@
 
 <h2>Edit</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+        
     <div class="form-horizontal">
         <h4>Character</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
-
+        @Html.HiddenFor(model => model.UserId)
+        @Html.HiddenFor(model => model.FinalDamage)
+        @Html.HiddenFor(model => model.FinalArmor)
+        @Html.HiddenFor(model => model.FinalMagic)
+    
         @*<div class="form-group">
             @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -24,31 +27,55 @@
                 @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
             </div>
         </div>*@
-
+    
         <div class="form-group">
-            @Html.LabelFor(model => model.WeaponId, "Weapon", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CharDamage, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CharDamage, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CharDamage, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    
+        <div class="form-group">
+            @Html.LabelFor(model => model.CharArmor, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CharArmor, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CharArmor, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    
+        <div class="form-group">
+            @Html.LabelFor(model => model.CharMagic, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CharMagic, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CharMagic, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    
+        <div class="form-group">
+            @Html.LabelFor(model => model.WeaponId, "WeaponId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("WeaponId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.WeaponId, "", new { @class = "text-danger" })
             </div>
         </div>
-
+    
         <div class="form-group">
-            @Html.LabelFor(model => model.ArmorId, "Armor", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ArmorId, "ArmorId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ArmorId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ArmorId, "", new { @class = "text-danger" })
             </div>
         </div>
-
+    
         <div class="form-group">
-            @Html.LabelFor(model => model.MagicId, "Magic", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MagicId, "MagicId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MagicId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MagicId, "", new { @class = "text-danger" })
             </div>
         </div>
-
+    
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -56,7 +83,7 @@
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
-
+    
         <div class="form-group">
             @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -64,7 +91,7 @@
                 @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
             </div>
         </div>
-
+    
         <div class="form-group">
             @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -72,7 +99,7 @@
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
         </div>
-
+    
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -80,7 +107,7 @@
         </div>
     </div>
 }
-
+    
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
