--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Characters/Index.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Characters/Index.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Index";
 }
 
+
 <h2>Index</h2>
+
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -12,54 +14,67 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Armor.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Magic.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.User.Email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Weapon.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CharDamage)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CharArmor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CharMagic)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Level)
         </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Weapon)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Armor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Magic)
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.User.Email)
-        </th>*@
-
-
         <th>
             @Html.DisplayNameFor(model => model.Image)
         </th>
         <th></th>
     </tr>
-
+    
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Level)
-        </td>
-
-        <td>
-            @Html.DisplayFor(modelItem => item.Weapon.Name)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Armor.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Magic.Name)
         </td>
-        @*<td>
+        <td>
             @Html.DisplayFor(modelItem => item.User.Email)
-        </td>*@
-
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Weapon.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CharDamage)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CharArmor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CharMagic)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Level)
+        </td>
         <td>
             @*@Html.DisplayFor(modelItem => item.Image)*@
             <img src="@item.Image" alt="@item.Name" />
@@ -71,5 +86,5 @@
         </td>
     </tr>
 }
-
+    
 </table>
