--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Bosses/Details.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Bosses/Details.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div id="TopPillars"></div>
+<div id="MiddlePillars">
+    <div id="Border">
 
 <div>
     <h4>Boss</h4>
@@ -113,3 +115,5 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+        </div>
+    </div>
