--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Armors/Details.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Armors/Details.cshtml
@@ -4,72 +4,75 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div id="TopPillars"></div>
+<div id="MiddlePillars">
+    <div id="Border">
 
-<div>
-    <h4>Armor</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        <div>
+            <h4>Armor</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Level)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Level)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Level)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Level)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BaseArmor)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.BaseArmor)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BaseArmor)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.BaseArmor)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FireDefense)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.FireDefense)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FireDefense)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.FireDefense)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IceDefense)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.IceDefense)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.IceDefense)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.IceDefense)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LightningDefense)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.LightningDefense)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LightningDefense)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.LightningDefense)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Image)
+                </dt>
 
-        <dd>
-            @*@Html.DisplayFor(model => model.Image)*@
-            <img src="@Html.DisplayFor(model => model.Image)" />
-        </dd>
+                <dd>
+                    @*@Html.DisplayFor(model => model.Image)*@
+                    <img src="@Html.DisplayFor(model => model.Image)" />
+                </dd>
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+            </dl>
+        </div>
+        <p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+            @Html.ActionLink("Back to List", "Index")
+        </p>
+        </div></div>
