--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Characters/Details.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Characters/Details.cshtml
@@ -4,125 +4,130 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div id="TopPillars"></div>
+<div id="MiddlePillars">
+    <div id="Border">
 
 
 
-<div>
-    <h4>Character</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        <div>
+            <h4>Character</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Level)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Level)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Level)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Level)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Armor.Name)
-        </dt>
-    
-        <dd>
-            @Html.DisplayFor(model => model.Armor.Name)
-        </dd>
-    
-        <dt>
-            @Html.DisplayNameFor(model => model.Magic.Name)
-        </dt>
-    
-        <dd>
-            @Html.DisplayFor(model => model.Magic.Name)
-        </dd>
-    
-        <dt>
-            @Html.DisplayNameFor(model => model.User.Email)
-        </dt>
-    
-        <dd>
-            @Html.DisplayFor(model => model.User.Email)
-        </dd>
-    
-        <dt>
-            @Html.DisplayNameFor(model => model.Weapon.Name)
-        </dt>
-    
-        <dd>
-            @Html.DisplayFor(model => model.Weapon.Name)
-        </dd>
-    
-        <dt>
-            @Html.DisplayNameFor(model => model.CharDamage)
-        </dt>
-    
-        <dd>
-            @Html.DisplayFor(model => model.CharDamage)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Armor.Name)
+                </dt>
 
-    
-        <dt>
-            @Html.DisplayNameFor(model => model.CharArmor)
-        </dt>
-    
-        <dd>
-            @Html.DisplayFor(model => model.CharArmor)
-        </dd>
-    
-        <dt>
-            @Html.DisplayNameFor(model => model.CharMagic)
-        </dt>
-    
-        <dd>
-            @Html.DisplayFor(model => model.CharMagic)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Armor.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FinalDamage)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Magic.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FinalDamage)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Magic.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FinalArmor)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.User.Email)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FinalArmor)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.User.Email)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FinalMagic)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Weapon.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FinalMagic)
-        </dd>
-    
-        
-    
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-    
-        <dd>
-            @*@Html.DisplayFor(model => model.Image)*@
-            <img src="@Html.DisplayFor(model => model.Image)" />
-        </dd>
-    
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+                <dd>
+                    @Html.DisplayFor(model => model.Weapon.Name)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.CharDamage)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.CharDamage)
+                </dd>
+
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.CharArmor)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.CharArmor)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.CharMagic)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.CharMagic)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.FinalDamage)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.FinalDamage)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.FinalArmor)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.FinalArmor)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.FinalMagic)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.FinalMagic)
+                </dd>
+
+
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Image)
+                </dt>
+
+                <dd>
+                    @*@Html.DisplayFor(model => model.Image)*@
+                    <img src="@Html.DisplayFor(model => model.Image)" />
+                </dd>
+
+            </dl>
+        </div>
+        <p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+            @Html.ActionLink("Back to List", "Index")
+        </p>
+        </div>
+    </div>
+
