--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Fights/Index.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Fights/Index.cshtml
@@ -4,47 +4,52 @@
     ViewBag.Title = "Index";
 }
 
-@*<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>*@
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Boss.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Character.Name)
-        </th>
-        <th></th>
-    </tr>
-    
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Boss.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Character.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@{
+    int i = 0;
 }
-    
-    </table>
-@*</body>
-</html>*@
+
+<div id="TopPillars"></div>
+<div id="MiddlePillars">
+    <div id="bosses">
+
+        <p>
+            @Html.ActionLink("Create New", "Create")
+        </p>
+
+
+        @foreach (var item in Model)
+        {
+            if (i % 2 == 0)
+            {
+                @:<div class='row' id='row1'>
+                    }
+            <div class='el' id='el1'>
+                
+                <div id='Border3'>
+                    <div class='boss'>
+                        @Html.DisplayFor(modelItem => item.Character.Name)
+                        <br />
+                        @Html.DisplayFor(modelItem => item.Boss.Name)
+                        
+                    </div>
+                </div>
+                <div class='crud'>
+                    <div>
+                        @Html.ActionLink("Fight", "Fight", new { id = item.Id })
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                        @Html.ActionLink("Details", "Details", new { id = item.Id })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    </div>
+                </div>
+            </div>
+
+            i = i + 1;
+            if (i % 2 == 0)
+            {
+                @:</div>
+                    }
+            }
+
+    </div>
+
+</div>
