--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Magics/Delete.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Magics/Delete.cshtml
@@ -4,77 +4,82 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<div id="TopPillars"></div>
+<div id="MiddlePillars">
+    <div id="Border">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Magic</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.BaseMagic)
-        </dt>
+        <h3>Are you sure you want to delete this?</h3>
+        <div>
+            <h4>Magic</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.BaseMagic)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BaseMagic)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.BaseMagic)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Fire)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Fire)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Fire)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Fire)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Ice)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Ice)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Ice)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Ice)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Lightning)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Lightning)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Lightning)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Lightning)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Level)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Level)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Level)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Level)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Image)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Image)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.Image)
+                </dd>
 
-    </dl>
+            </dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
+            }
         </div>
-    }
-</div>
+        </div>
+    </div>
