--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Shared/_Layout.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Shared/_Layout.cshtml
@@ -3,23 +3,32 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
+    <title>Dark Souls Register</title>
+    @*@Styles.Render("~/Content/css")*@
     @Scripts.Render("~/bundles/modernizr")
 
+    <link href="@Url.Content("~/Styles/styleRes.css")" rel="stylesheet" type="text/css" />
+    @RenderSection("Styles", false)
+
+
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
+<body id="wrapper">
+    <header id="head">
+        <a href="@Url.Action("Index", "Home")"><img id="logoimg" src="~/img/BonFire/Bonfire3.png" alt="logo"></a>
+        <img id="titleimg" src="~/img/Title.png" alt="title">
+        <div id="BorderLog">
+            @Html.Partial("_LoginPartial")
+        </div>
+    </header>
+    <div class="line"></div>
+    <nav id="nav">
+        <ul id="nav-list">
+            @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>*@
+            @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
@@ -34,17 +43,18 @@
                         <li>@Html.ActionLink("Fights", "Index", "Fights")</li>
                     }
                 </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
+            </ul>
+        </nav>
+        <div class="line"></div>
+    <div id="main">
         @RenderBody()
-        <hr />
+            <div id="BottomPillars"></div>
+    </div>
+
+        <div class="clear"></div>
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
-    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
