--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Weapons/Index.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Weapons/Index.cshtml
@@ -4,65 +4,85 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Level)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.BaseDamage)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Bleed)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Poison)
-        </th>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Image)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Level)
-        </td>
-
-        <td>
-            @Html.DisplayFor(modelItem => item.BaseDamage)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Bleed)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Poison)
-        </td>
-
-        <td>
-            @*@Html.DisplayFor(modelItem => item.Image)*@
-            <img src="@item.Image" alt="@item.Name" />
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+@{
+    int i = 0;
 }
 
-</table>
+<div id="TopPillars"></div>
+<div id="MiddlePillars">
+    <div id="bosses">
+
+        <p>
+            @Html.ActionLink("Create New", "Create")
+        </p>
+        
+
+            @foreach (var item in Model)
+            {
+                if (i % 2 == 0)
+                    {
+                        @:<div class='row' id='row1'>
+                    }
+                    <div class='el' id='el1'>
+                        <h1 class='Names'>@Html.DisplayFor(modelItem => item.Name)</h1>
+                        <div id='Border3'>
+                            <div class='boss'><br />                                
+                                <img src="@item.Image" alt="@item.Name" />
+                            </div>
+                        </div>
+                        <div class='crud'>
+                            <div>
+                                @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                @Html.ActionLink("Details", "Details", new { id = item.Id })
+                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            </div>
+                        </div>
+                    </div>
+
+                    i = i + 1;
+                    if (i % 2 == 0)
+                    {
+                        @:</div>
+                    }
+            }
+
+        </div>
+</div>
+
+@*<td>
+        @Html.DisplayFor(modelItem => item.Level)
+    </td>
+
+    <td>
+        @Html.DisplayFor(modelItem => item.BaseDamage)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Bleed)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Poison)
+    </td>*@
+@*<table class="table">
+    <tr>*@
+@*<th>
+        @Html.DisplayNameFor(model => model.Name)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Level)
+    </th>
+
+    <th>
+        @Html.DisplayNameFor(model => model.BaseDamage)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Bleed)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.Poison)
+    </th>
+
+    <th>
+        @Html.DisplayNameFor(model => model.Image)
+    </th>
+    <th></th>*@
+@*</tr>*@
