--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Shared/_Layout.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
             @*@Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     @if (Context.User.Identity.IsAuthenticated)
                     {
                         <li>@Html.ActionLink("Bosses", "Index", "Bosses")</li>
