--- a/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Account/Login.cshtml
+++ b/DarkSoulsSiteMVC/DarkSoulsSiteMVC/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+@*<h2>@ViewBag.Title.</h2>*@
 <div id="TopPillars"></div>
 <div id="MiddlePillars">
     <div id="Border">
